新增事件监听器并重构CustomRegister增强扫描